--- a/vetApp/Templates/shared/base.html
+++ b/vetApp/Templates/shared/base.html
@@ -140,10 +140,10 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand"> 
-            <i class="fas fa-paw me-2"></i>
-                VetCare
-          </a>
+        <a class="navbar-brand">
+          <i class="fas fa-paw me-2"></i>
+          VetCare
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -228,12 +228,12 @@
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link">
+              <a class="nav-link" href="{% url 'login' %}">
                 <i class="fas fa-sign-in-alt"></i> Iniciar Sesión
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">
+              <a class="nav-link" href="{% url 'register' %}">
                 <i class="fas fa-user-plus"></i> Registrarse
               </a>
             </li>
