--- a/vetApp/Templates/shared/base.html
+++ b/vetApp/Templates/shared/base.html
@@ -220,7 +220,7 @@
                 <li><hr class="dropdown-divider" /></li>
                 {% endif %}
                 <li>
-                  <a class="dropdown-item">
+                  <a class="dropdown-item" href="{% url 'logout' %}">
                     <i class="fas fa-sign-out-alt"></i> Cerrar Sesión
                   </a>
                 </li>
@@ -233,7 +233,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'register' %}">
+              <a class="nav-link" href="{% url 'Authenticacion' %}">
                 <i class="fas fa-user-plus"></i> Registrarse
               </a>
             </li>
