--- a/vetApp/Templates/shared/base.html
+++ b/vetApp/Templates/shared/base.html
@@ -140,7 +140,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a class="navbar-brand">
+        <a class="navbar-brand" href="{% url 'home' %}">
           <i class="fas fa-paw me-2"></i>
           VetCare
         </a>
@@ -164,14 +164,7 @@
               </a>
             </li>
             {% elif user.doctor %}
-            <li class="nav-item">
-              <a
-                class="nav-link {% if request.path == '/agendamiento/mis-citas/' %}active{% endif %}"
-                href="{% url 'agendamiento:mis_citas' %}"
-              >
-                <i class="fas fa-calendar-check"></i> Mis Consultas
-              </a>
-            </li>
+            <li class="nav-item"></li>
             {% elif user.paciente %}
             <li class="nav-item">
               <a
@@ -262,22 +255,22 @@
         {% endfor %}
       </div>
       <script>
-        document.addEventListener("DOMContentLoaded", function () {
+        document.addEventListener('DOMContentLoaded', function () {
           // Auto-ocultar mensajes después de 5 segundos
           setTimeout(function () {
-            document.querySelectorAll(".alert").forEach(function (alert) {
-              var bsAlert = new bootstrap.Alert(alert);
-              bsAlert.close();
-            });
-          }, 5000);
+            document.querySelectorAll('.alert').forEach(function (alert) {
+              var bsAlert = new bootstrap.Alert(alert)
+              bsAlert.close()
+            })
+          }, 5000)
 
           // Eliminar mensajes del DOM después de que se oculten
-          document.querySelectorAll(".alert").forEach(function (alert) {
-            alert.addEventListener("closed.bs.alert", function () {
-              this.remove();
-            });
-          });
-        });
+          document.querySelectorAll('.alert').forEach(function (alert) {
+            alert.addEventListener('closed.bs.alert', function () {
+              this.remove()
+            })
+          })
+        })
       </script>
       {% endif %} {% block content %}{% endblock %}
     </main>
