--- a/vetApp/Templates/shared/base.html
+++ b/vetApp/Templates/shared/base.html
@@ -154,35 +154,55 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
-            {% if user.is_authenticated %} {% if user.is_superuser %}
-            <li class="nav-item">
-              <a
-                class="nav-link {% if request.path == '/agendamiento/admin-dashboard/' %}active{% endif %}"
-                href="{% url 'agendamiento:admin_dashboard' %}"
-              >
-                <i class="fas fa-cogs"></i> Panel de Administración
-              </a>
-            </li>
-            {% elif user.doctor %}
-            <li class="nav-item"></li>
-            {% elif user.paciente %}
-            <li class="nav-item">
-              <a
-                class="nav-link {% if request.path == '/agendamiento/agendar/' %}active{% endif %}"
-                href="{% url 'agendamiento:agendar_cita' %}"
-              >
-                <i class="fas fa-calendar-plus"></i> Agendar Cita
-              </a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link {% if request.path == '/agendamiento/mis-citas/' %}active{% endif %}"
-                href="{% url 'agendamiento:mis_citas' %}"
-              >
-                <i class="fas fa-calendar-check"></i> Mis Citas
-              </a>
-            </li>
-            {% endif %} {% endif %}
+            {% if user.is_authenticated %}
+              
+              {% if user.is_superuser %}
+                <li class="nav-item">
+                  <a
+                    class="nav-link {% if request.path == '/agendamiento/admin-dashboard/' %}active{% endif %}"
+                    href="{% url 'agendamiento:admin_dashboard' %}"
+                  >
+                    <i class="fas fa-cogs"></i> Panel de Administración
+                  </a>
+                </li>
+              {% elif user.doctor %}
+                <li class="nav-item">
+                  <a
+                    class="nav-link {% if request.path == '/citas/' %}active{% endif %}"
+                    href="{% url 'citas' %}"
+                  >
+                    <i class="fas fa-calendar-plus"></i> Agendar Cita
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link {% if request.path == '/cliente/' %}active{% endif %}"
+                    href="{% url 'cliente' %}"
+                  >
+                    <i class="fas fa-calendar-plus"></i> Cliente
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    class="nav-link {% if request.path == '/reportes/' %}active{% endif %}"
+                    href="{% url 'reportes' %}"
+                  >
+                    <i class="fas fa-calendar-plus"></i> Reportes
+                  </a>
+                </li>
+              {% elif user.clientes %}
+              
+                <li class="nav-item">
+                  <a
+                    class="nav-link {% if request.path == '/citas/' %}active{% endif %}"
+                    href="{% url 'citas' %}"
+                  >
+                    <i class="fas fa-calendar-plus"></i> Agendar Cita
+                  </a>
+                </li>
+                
+              {% endif %} 
+            {% endif %}
           </ul>
           <ul class="navbar-nav">
             {% if user.is_authenticated %}
@@ -272,7 +292,9 @@
           })
         })
       </script>
-      {% endif %} {% block content %}{% endblock %}
+      {% endif %} 
+      
+      {% block content %}{% endblock %}
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
