--- a/vetApp/Templates/Home/GestionCitas.html
+++ b/vetApp/Templates/Home/GestionCitas.html
@@ -1,5 +1,5 @@
-{% extends 'shared/base.html' %} {% block title %}VetCare - Gestión de Citas{%
-endblock %} {% block content %}
+{% extends 'shared/base.html' %} {% block title %}VetCare - Gestión de Citas
+{%endblock %} {% block content %}
 <div class="container mt-4">
   <!-- Mensajes de alerta -->
   {% if messages %}
