--- a/vetApp/Templates/reportes/Reportes.html
+++ b/vetApp/Templates/reportes/Reportes.html
@@ -1,15 +1,15 @@
 {% extends 'shared/base.html' %} {% block title %}Inicio{% endblock %} 
 {% load static %}
 {% block extra_css %}
- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+ <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-<link rel="stylesheet" href="{% static 'css/gestionCitas.css' %}"/>
+<link rel="stylesheet" href="{% static 'css/gestionCitas.css' %}"/> -->
 
 
 {% endblock %}
 
 {% block content %}
-<div class="container mb-5">
+<div class="container mt-4">
   <!-- Sección de Reportes -->
   <div class="section-content active" id="reports-section">
     <div class="row mb-4">
